# zip-fix-filename-encoding

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  UTF8String.h  configure.ac  runzip.c
libzip-0.7.1/: Makefile.am  configure.ac
libzip-0.7.1/lib/: Makefile.am  zip.h  zip_close.c  zip_dirent.c  zip_file_get_offset.c  zip_open.c  zipint.h
libzip-0.7.1/src/: Makefile.am
m4/: .gitignore
src/: Makefile.am  UTF8String.c  runzip.c
tests/: Makefile.am  check-runzip.sh
